--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 
   <h1>Fiches Formateurs JCI</h1>
-  <input type="text" id="searchInput" placeholder="Rechercher par nom ou session...">
+  <input type="text" id="searchInput" placeholder="Rechercher par nom, session ou domaine de formation">
 
   <div id="cards"></div>
 
