--- a/index.html
+++ b/index.html
@@ -31,15 +31,18 @@
       align-items: center;
       margin-bottom: 30px;
     }
+    .logo-placeholder {
+      width: 100px;
+    }
   </style>
 </head>
 <body>
 
   <div class="container">
   <div class="logos">
-      <div class="logo-placeholder"><img src="JCI-Tunisie.png" alt="" srcset=""></div>
-      <div class="logo-placeholder"><img src="logo_we_can_make_it-01.png" alt="" srcset=""></div>
-      <div class="logo-placeholder"><img src="taba3ni.png" alt="" srcset=""></div>
+      <img src="JCI-Tunisie.png"class="logo-placeholder" alt="" srcset="">
+      <img src="logo_we_can_make_it-01.png"class="logo-placeholder" alt="" srcset="">
+      <img src="taba3ni.png" class="logo-placeholder" alt="" srcset="">
     </div>
     <h4 class="center header-color">Fiches Formateurs JCI Tunisie</h4>
 
