--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
   <!-- Materialize CSS & Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=El+Messiri:wght@400..700&family=Zain:wght@200;300;400;700;800;900&display=swap" rel="stylesheet">
 
   <style>
     body {
       background: #f0f2f5;
       padding: 20px;
+      font-family: Cairo, Zain;
     }
     .card-content p {
       margin: 5px 0;
@@ -40,11 +44,11 @@
 
   <div class="container">
   <div class="logos">
-      <img src="JCI-Tunisie.png" class="logo-placeholder" alt="" srcset="">
-      <img src="logo_we_can_make_it-01.png" class="logo-placeholder" alt="" srcset="">
+      <img src="JCI-Tunisie.png"class="logo-placeholder" alt="" srcset="">
+      <img src="logo_we_can_make_it-01.png"class="logo-placeholder" alt="" srcset="">
       <img src="taba3ni.png" class="logo-placeholder" alt="" srcset="">
     </div>
-    <h4 class="center header-color">Fiches Formateurs JCI Tunisie</h4>
+    <h4 class="center header-color" style="font-family: Cairo; font-weight: 900;">Fiches Formateurs JCI Tunisie</h4>
 
 
     <div class="input-field search-bar">
