--- a/index.html
+++ b/index.html
@@ -30,23 +30,22 @@
       color: #000 !important;
     }
     .logos {
-      display: flex;
       justify-content: space-between;
       align-items: center;
       margin-bottom: 30px;
     }
     .logo-placeholder {
-      width: 100px;
+      width: 150px !important;
     }
   </style>
 </head>
 <body>
 
   <div class="container">
-  <div class="logos">
-      <img src="JCI-Tunisie.png"class="logo-placeholder" alt="" srcset="">
-      <img src="logo_we_can_make_it-01.png"class="logo-placeholder" alt="" srcset="">
-      <img src="taba3ni.png" class="logo-placeholder" alt="" srcset="">
+  <div class="logos row">
+      <img src="JCI-Tunisie.png"class="logo-placeholder col s12 l4" alt="" srcset="">
+      <img src="logo_we_can_make_it-01.png"class="logo-placeholder col s12 l4" alt="" srcset="">
+      <img src="taba3ni.png" class="logo-placeholder col s12 l4" alt="" srcset="">
     </div>
     <h4 class="center header-color" style="font-family: Cairo; font-weight: 900;">Fiches Formateurs JCI Tunisie</h4>
 
