--- a/index.html
+++ b/index.html
@@ -30,13 +30,6 @@
       background-color: #edbd27 !important;
       color: #000 !important;
     }
-    .logos {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 30px;
-      flex-wrap: wrap;
-    }
     .logo-placeholder {
       width: 150px !important;
       margin-bottom: 20px;
@@ -71,7 +64,7 @@
     <div class="logos row">
       <img src="JCI-Tunisie.png" class="logo-placeholder col s12 l4" alt="" srcset="">
       <img src="logo_we_can_make_it-01.png" class="logo-placeholder col s12 l4" alt="" srcset="">
-      <img src="taba3ni.png" class="logo-placeholder col s12 l4" alt="" srcset="">
+      <img src="taba3ni.png" style="width: 120px !important;" class="logo-placeholder col s12 l4" alt="" srcset="">
     </div>
     <h4 class="center header-color" style="font-family: Cairo; font-weight: 900;">Fiches Formateurs JCI Tunisie</h4>
 
