--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       color: #000 !important;
     }
     .logo-placeholder {
-      width: 150px !important;
+      width: 120px !important;
       margin-bottom: 20px;
     }
 
@@ -61,10 +61,10 @@
 <body>
 
   <div class="container">
-    <div class="logos row">
+    <div class="logos row center" style="width: 100%;">
       <img src="JCI-Tunisie.png" class="logo-placeholder col s12 l4" alt="" srcset="">
       <img src="logo_we_can_make_it-01.png" class="logo-placeholder col s12 l4" alt="" srcset="">
-      <img src="taba3ni.png" style="width: 120px !important;" class="logo-placeholder col s12 l4" alt="" srcset="">
+      <img src="taba3ni.png" style="width: 90px !important;" class="logo-placeholder col s12 l4" alt="" srcset="">
     </div>
     <h4 class="center header-color" style="font-family: Cairo; font-weight: 900;">Fiches Formateurs JCI Tunisie</h4>
 
