--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <style>
     body {
       background: #f0f2f5;
-      padding: 20px;
       font-family: Cairo, Zain;
     }
     .card-content p {
@@ -68,7 +67,7 @@
     </div>
     <h4 class="center header-color" style="font-family: Cairo; font-weight: 900;">Fiches Formateurs JCI Tunisie</h4>
 
-    <div class="input-field search-bar">
+    <div class="input-field search-bar" style="width: 80%;">
       <i class="material-icons prefix black-text">search</i>
       <input id="searchInput" type="text" class="validate">
       <label for="searchInput">Rechercher par nom, domaine ou session</label>
